tests/testfiles/passing/invalid_identifiers/keyword_as_id_struct.c
/* Keyword as identifier: struct */
int main() {
    int struct;
}